--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav a{
 nav a span{
   position: relative;
   z-index: 1;
-  transition: all 0.3s;
+  transition: all 0.3s ease;
 }
 
 nav a::after {
